css/learn.css
/*------------------------------------*\
    #CONTENTS
\*------------------------------------*/
/**

*SETTINGS
**root . . . . . . . Globally available variables

*TOOLS
**gone . . . . . . . When project below has been selected
**
**mini . . . . . . . When project is not selected

*PROJECT-BOX
**code-editor  . . . Holds codearea and line-numbers
**input-output . . . Parent of full codearea
**project  . . . . . Holds full project
**project-parent . . All projects

*TEXT-BOXES
**codearea . . . . . Where user types code
**line-numbers . . . Side left shows line 1 2 3 etc
**output . . . . . . codearea output

*PROJECT-INNER
**top-bar  . . . . . Holds close and redo button
**instructions . . . Text at top of project
**completed-icon . . Coin icon when user succeeds in learning
**
**close-restart  . . Div holds close and restart
**run-code . . . . . Button runs code
**next-project . . . Navigates to next project
**project-button . . Run and next
**button-img . . . . Run button image going down and up
**hint-popup . . . . Displays hint text
**hint-button  . . . Toggles hint-popup

*NO-ACTIVE 
**output . . . . . . (to be determined)

**/

/*------------------------------------*\
    #SETTINGS
\*------------------------------------*/
:root{
    --label-width: 2em;
    --code-width: 50vw;

    --flex-bg-color: #222;
    --flex-border-color: rgba(55, 58, 63, 0.589);
    --flex-highlight-border-color: rgba(15, 106, 241, 0.61);
    
    --cubic-bez-1: cubic-bezier(0,.35,.61,.96);
    --cubic-bez-2: cubic-bezier(1,.25,.04,1);
    --cubic-bez-3: cubic-bezier(.53,.96,0,1);
    --cubic-bez-4: cubic-bezier(.23,1.15,.26,.93);
    --cubic-bez-overflow: cubic-bezier(.54,1.55,0,1);
    --cubic-bez-overflow-2: cubic-bezier(0,1.03,.08,1.34);

    --general-transition: var(--to-transition) var(--transition-speed) var(--cubic-bez-4);
    --fast-transition: var(--to-transition) calc(var(--transition-speed) / 5) var(--cubic-bez-overflow);
}

@property --transition-speed {
    syntax: "<time>";
    initial-value: 0.6s;
    inherits: true;
}

@property --to-transition { /* doesn't work (: */
    syntax: "*";
    initial-value: all;
    inherits: true;
}

@media (orientation: landscape) {
    :root{
        --code-height: 20vw;
    }
}

@media (orientation: portrait) {
    :root{
        --code-height: 15vh;
    }
}

/*------------------------------------*\
    #TOOLS
\*------------------------------------*/
.gone {
    -webkit-transition: var(--general-transition);
    -moz-transition: var(--general-transition);
    -o-transition: var(--general-transition);
    transition: var(--general-transition);


    max-height: 0px;
    flex: 0 0 0;
    padding-block: 10px;
    padding-inline: 15px;
    margin: 10px;
    border: 0;
    overflow: hidden;

    user-select: none;
    -moz-user-select: none;
    
    border-radius: 5px;
}

/*------------------------------------*\
    #PROJECT-BOX
\*------------------------------------*/

#project-parent {
    display: flex;

    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;

    background-color: #0003;
}

@media (orientation: landscape) {
    #project-parent {
        justify-content: start;
    }
}

@media (orientation: portrait) {
    #project-parent {
        justify-content: space-around;
        width: 100%;
    }
}

.project {
    --transition-speed: .4s;

    -webkit-transition: var(--general-transition);
    -moz-transition: var(--general-transition);
    -o-transition: var(--general-transition);
    transition: var(--general-transition);

    height: 100%;

    background-color: var(--flex-bg-color);

    border-color: var(--flex-border-color);
    border-width: 5px;
    border-style: solid;
}

.project:not(.mini):not(.gone) {
    min-width: 100%;
    border-radius: 0px !important;
}

.project.gone:hover, .project.mini:hover{
    -webkit-transition: var(--fast-transition);
    -moz-transition: var(--fast-transition);
    -o-transition: var(--fast-transition);
    transition: var(--fast-transition);

    border-color: var(--flex-highlight-border-color);
}

.project.mini:not(.gone) {
    --margin: 5px;

    -webkit-transition: var(--general-transition);
    -moz-transition: var(--general-transition);
    -o-transition: var(--general-transition);
    transition: var(--general-transition);

    padding-bottom: 10%;
    width: 20px;
    margin: var(--margin);
    min-height: 100%;
}

@media (orientation: landscape) {
    .project.mini:not(.gone) {

        -webkit-transition: var(--general-transition);
        -moz-transition: var(--general-transition);
        -o-transition: var(--general-transition);
        transition: var(--general-transition);

        flex-grow: 1;
        box-sizing: border-box;
        flex: 0 0 calc(33.33% - (var(--margin) * 3));
    }
}

@media (orientation: portrait) {
    .project.mini:not(.gone) {
        min-width: 45%;
        max-width: 100%;

        flex: 0 0 100%;
    }
}

/*.project.gone:not(.mini) {
    transition: cubic-bezier(0.075, 0.82, 0.165, 1) all 1s;
    min-width: 5%;
    max-width: 30%;
    max-height: 100px;
}*/

.project.gone *, .project.mini *:not(.show-when-mini) {
    -webkit-transition: var(--general-transition);
    -moz-transition: var(--general-transition);
    -o-transition: var(--general-transition);
    transition: var(--general-transition);

    opacity: 0 !important;

    width: 0px;
    height: 0px;
    padding: 0px;
    margin: 0px;
}


.project:not(.mini) > * {
    -webkit-transition: var(--general-transition);
    -moz-transition: var(--general-transition);
    -o-transition: var(--general-transition);
    transition: var(--general-transition);

    opacity: 1 !important;
}

.show-when-mini:not(.gone).hide {
    display: flex;
    opacity: .05;
}

.project-title{
    padding-left: 5px;
    align-self: center;
    justify-self: center;
}

.show-when-mini:not(.hide):not(.gone) {
    visibility: visible;
    /*display: flex;*/
    opacity: 1;

    /*align-self: center;*/

    top: 0 !important;
    margin: 0;
    
    width: auto; 
    height: auto;
    min-width: 20px; 
    min-height: 20px;

    /*padding: 1px;*/
}

@media (orientation: landscape) {
    
}

@media (orientation: portrait) {
    
}

/*------------------------------------*\
    #TEXT-BOXES
\*------------------------------------*/

.code-editor {
    display: flex;

    flex-direction: row;
}

@media (orientation: portrait) {
    .code-editor, .code-highlight, .line-numbers, .codearea {
        /*height: var(--code-height) !important; /*using important here should not be neccisary, be sure to clean this later.*/
        height: 100%;
    }
}

.codearea, .line-numbers, .output, .code-highlight {
    --line-width: 30px; /*defualt value not required*/
}

.codearea, .code-highlight {
    --transition-speed: .01s;

     -webkit-transition: var(--general-transition);
    -moz-transition: var(--general-transition);
    -o-transition: var(--general-transition);
    transition: var(--general-transition);

    position: relative;

    margin: 0 !important; 
    padding: 0;
    padding-left: 10px !important;
    border: 0 !important;
    outline: none;
    resize: none;
    
    height: calc(var(--code-height));
    width: var(--code-width);
    min-width: 5px;
    line-height: 30px !important;
    box-sizing: border-box;
    font-size: 1rem;

    white-space: pre; 
    tab-size: 2em !important; 
    -moz-tab-size: 40px !important; 
}

.codearea {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    z-index: 1;
    -webkit-text-fill-color: #aaa3 !important;
    text-shadow: none !important;
    background-color: #0000;
    
    background-image: none;
    overflow: auto;
}

.code-highlight{
    overflow: auto;
}

.code-highlight, .code-highlight * {
    tab-size: 2em !important; 
    -moz-tab-size: 40px !important; 
    z-index: 0;
    pointer-events: none;
    padding-top: 3px !important;
}

.code-highlighting code {
    font-family: inherit;
    font-size: inherit;
    tab-size: inherit;
    line-height: inherit;
}

.line-numbers {
    -webkit-transition: var(--general-transition);
    -moz-transition: var(--general-transition);
    -o-transition: var(--general-transition);
    transition: var(--general-transition);

    --this-color: rgba(255, 255, 255, 0.667);

    text-align: center;
    justify-self: unset;
    user-select: none;
    line-height: 30px;
    height: var(--code-height);
    min-width: var(--label-width);
    overflow: hidden; /* hides scrollbar */
    box-sizing: border-box;
    padding-bottom: 5px;
    margin-right: 2px;

    color: var(--this-color);
}

.output {
    user-select: none;
    height: var(--code-height);
    width: max(30vw, 5em);
    padding-left: 10px !important;
    overflow-y: auto;
    box-sizing: border-box;
    white-space: pre-wrap; /* Preserve whitespace and wrap as needed */
    word-wrap: break-word; /* Break long words to fit within the container */
    font-size: large;
    line-height: 30px;
    margin-left: 2px;
    
    resize: none;
    border: none;

    --bg-color-main: #1b1b1b !important;
}

.output-correct {
    color: rgb(16, 255, 56) !important;
    --bg-color-main: #1d201e !important;
}

.output-mid {
    color: rgb(145, 143, 10) !important;
}

.output-incorrect {
    color: rgb(255, 35, 35) !important;
    --bg-color-main: #201d1d !important;
}

@media (orientation: portrait) { /*when the screen is small, put output under instead of to the right*/
    .input-output {
        flex-direction: column !important;
    }
    .line-numbers {
        height: calc(var(--code-height));
    }
    .output {
        /*width: calc(var(--code-width) + var(--label-width)) ;*/
        margin-top: 0vh;
        width: 100%;
    }
    .codearea, .code-highlight, .single-block-grid {
        width: 100%;
        height: calc(var(--code-height));
    }
    .project{
        max-height: 900px;
    }
}

/*------------------------------------*\
    #PROJECT-INNER
\*------------------------------------*/
.top-bar {
    display: flex;
    flex-direction: row;
    justify-content: left;
}

.instructions{
    position: relative;
    left: 0%;
    text-align: center;
    width: 100%;
}

.completed-icon {
    --size: 50px;
    position: relative;
    align-self: center;
    padding-right: 10px;
    width: var(--size);
    height: var(--size);
}

/*buttons*/
.close-restart {
    display: flex;
    flex-direction: row;
    padding-right: 10px;
}

.run-code {
    font-size: large;
    padding-top: 20px;
    padding-bottom: 20px;
    padding: 10px;
    border: #00000000;
    border-radius: 0%;
    background: none;
}

.next-project {
    overflow: hidden;
    font-size: large;
    padding: 1px;
    background-color: #00000000;
    border-color: #00000000;
    overflow-y: auto;
    box-sizing: border-box;
}

.next-project .run-code {
    width: 100%;
}

@media (orientation: landscape) {
    .next-project{
        max-width: 64px;
    }
    .run-code{
        max-width: 100px;
    }
}

@media (orientation: portrait) {
    .next-project{
        max-width: 64px;
    }
    .run-code{
        max-width: 100px;
    }
}

.project-button, .back-to-top-button{
    border: #0000;
    background-color: #0000;
    width: 50px; 
    height: 50px;

    
	image-rendering: pixelated;
}

/*.project-button-buttons {
    max-height: 10vh;
}*/

.run-code-button-img:active {
    border: #000000;
    background:fixed;
    transform: translateY(10px);
}

.run-code-button-img:hover:not(:active) {
    transform: translateY(-1px);
}

.hint-popup {
    /*transition: all 1s;*/
    position: relative;
    align-self: center;
    top: 0%;
    background-color: #000;
}

.project-hint-button {
    align-self: right !important;
    right: 0px !important;
}


/*------------------------------------*\
    #NO-ACTIVE
\*------------------------------------*/
.output:active, .output:focus {
    outline: none;
    border: none;
}

